--- a/src/app/components/landing-page/slider/Slider.scss
+++ b/src/app/components/landing-page/slider/Slider.scss
@@ -4,6 +4,11 @@
 $body-bg:  #111C7B; // overwritten bootstrap variable
 /* Importing Bootstrap SCSS file. */
 
+input[type=date]::-webkit-calendar-picker-indicator {
+  color: #111C7B;
+  background-image: url('/assets/date_range_24px_outlined.png');
+}
+
 #sloganRight { 
   color: white;
   font-size: 10pt;
@@ -30,17 +35,15 @@ $body-bg:  #111C7B; // overwritten bootstrap variable
   height:2.4rem;
   box-shadow: 0 0 10px;
   opacity:0.93;
-
+  z-index: 3;
+  position: relative;
 }
 #landing-where-image {width: 1.3em;
-   height: 1.3em;
+   height: 1.3em; 
    margin-left: 0.3em;
    margin-top: 0.54em;
 }
-#landing-where-input {border:none;
-  width:calc(100% - 2.4em);
-  font-family: 'Open-Sans-Italic';
-}
+
 #landing-from { 
   padding:0;
   box-shadow:0 0 10px;
@@ -56,8 +59,10 @@ $body-bg:  #111C7B; // overwritten bootstrap variable
 }
 #landing-date-from-input {border: none;
   padding-left:0.2em;
-  width:calc(100% - 2.4em);
-  float:left 
+  // width:calc(100% - 2.4em);
+  float:left;
+    text-align: center;
+  width: 100%
 }
 #landing-to { 
   padding:0;
@@ -74,9 +79,11 @@ $body-bg:  #111C7B; // overwritten bootstrap variable
 #landing-date-to-input { 
   border: none;
   padding-left:0.2em;
-  width:calc(100% - 2.4em);
+  // width:calc(100% - 2.4em);
   float:left;
   font-family: 'Open-Sans-Italic';
+  text-align: center;
+  width: 100%
 }
 
 #sub-wrapper {
@@ -150,6 +157,15 @@ $body-bg:  #111C7B; // overwritten bootstrap variable
   font-style:normal;
 }
 
+p {
+  color: white;
+  font-family: 'Passion-One';
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-bottom:0
+}
+
 .container .row input {
   font-size: 10pt;
   font-style: italic;
@@ -173,6 +189,10 @@ $body-bg:  #111C7B; // overwritten bootstrap variable
   width: 100%;  
   border-top: 8px solid #2e2aa8;
   border-bottom: 8px solid #2e2aa8;
+}
+
+#text-mid {
+  margin: 0;
 }
 
 #textBanner, #sloganLeft, #sloganRight {
@@ -243,12 +263,3 @@ $body-bg:  #111C7B; // overwritten bootstrap variable
     margin-top:15em
   }
  }
-
- p {
-  color: white;
-  font-family: 'Passion-One';
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin-bottom: 0 !important;
-}
